add DELETE method

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Flask Auth Example</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
+    <script src = "https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
 </head>
 
 <body>
