--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -8,7 +8,7 @@
 <!--Add food-->
 <div class="column">
   <div class="box">
-    <form method="POST" action="/profile">
+    <form method="POST" action="/food_create">
       <div class="field is-horizontal">
         <div class="field-body">
 
@@ -37,6 +37,14 @@
   </div>
 </div>
 
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+    <div class="notification is-info">
+        {{ messages[0] }}
+    </div>
+{% endif %}
+{% endwith %}
+
 <!--Food Table-->
 <div class="column">
   <table class="table is-fullwidth">
@@ -45,6 +53,7 @@
         <th>Food</th>
         <th>Quantity</th>
         <th>Expiration</th>
+        <th>Actions</th>
       </tr>
     </thead>
     <tbody>
@@ -53,6 +62,16 @@
         <th>{{ row.name }}</th>
         <th>{{ row.quantity }}</th>
         <th>{{ row.expiration_date }}</th>
+        <th>
+          <form method="POST" action="/food_delete/{{ row.id }}">
+            <button class="button is-danger is-outlined" type="submit">
+              <span>Delete</span>
+              <span class="icon is-small">
+                <i class="fas fa-times"></i>
+              </span>
+            </button>
+          </form>
+        </th>
       </tr>
       {% endfor %}
     </tbody>
