--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -13,20 +13,20 @@
         <div class="field-body">
 
           <div class="field">
-              <div class="control">
-                  <input class="input is-large" type="text" name="food" placeholder="food" autofocus="">
-              </div>
-          </div>
-
-          <div class="field">
-              <div class="control">
-                  <input class="input is-large" type="number" name="quantity" placeholder="quantity" autofocus="">
-              </div>
+            <div class="control">
+              <input class="input is-large" type="text" name="food" placeholder="food" autofocus="">
+            </div>
           </div>
 
           <div class="field">
             <div class="control">
-                <input class="input is-large" type="date" name="expiration_date" placeholder="expiration">
+              <input class="input is-large" type="number" name="quantity" placeholder="quantity" autofocus="">
+            </div>
+          </div>
+
+          <div class="field">
+            <div class="control">
+              <input class="input is-large" type="date" name="expiration_date" placeholder="expiration">
             </div>
           </div>
 
@@ -39,9 +39,9 @@
 
 {% with messages = get_flashed_messages() %}
 {% if messages %}
-    <div class="notification is-info">
-        {{ messages[0] }}
-    </div>
+<div class="notification is-info">
+  {{ messages[0] }}
+</div>
 {% endif %}
 {% endwith %}
 
@@ -57,25 +57,86 @@
       </tr>
     </thead>
     <tbody>
-      {% for row in table %}
+      {% for food in table %}
       <tr>
-        <th>{{ row.name }}</th>
-        <th>{{ row.quantity }}</th>
-        <th>{{ row.expiration_date }}</th>
+        <th>{{ food.name }}</th>
+        <th>{{ food.quantity }}</th>
+        <th>{{ food.expiration_date }}</th>
         <th>
-          <form method="POST" action="/food_delete/{{ row.id }}">
-            <button class="button is-danger is-outlined" type="submit">
-              <span>Delete</span>
-              <span class="icon is-small">
-                <i class="fas fa-times"></i>
-              </span>
-            </button>
-          </form>
+          <div class="field is-grouped is-horizontal">
+            <p class="control">
+              <button class="button is-warning is-outlined js-modal-trigger" data-target="modal-food-update" type="submit">
+                <span>Edit</span>
+                <span class="icon is-small">
+                  <i class="fas fa-edit"></i>
+                </span>
+              </button>
+            </p>
+            <p class="control"></p>
+            <form method="POST" action="/food_delete/{{ food.id }}">
+              <button class="button is-danger is-outlined" type="submit">
+                <span>Delete</span>
+                <span class="icon is-small">
+                  <i class="fas fa-times"></i>
+                </span>
+              </button>
+            </form>
+            </p>
+            {% include 'modal_food_update.html' %}
+          </div>
         </th>
       </tr>
       {% endfor %}
     </tbody>
   </table>
 </div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+  // Functions to open and close a modal
+  function openModal($el) {
+    $el.classList.add('is-active');
+  }
+
+  function closeModal($el) {
+    $el.classList.remove('is-active');
+  }
+
+  function closeAllModals() {
+    (document.querySelectorAll('.modal') || []).forEach(($modal) => {
+      closeModal($modal);
+    });
+  }
+
+  // Add a click event on buttons to open a specific modal
+  (document.querySelectorAll('.js-modal-trigger') || []).forEach(($trigger) => {
+    const modal = $trigger.dataset.target;
+    const $target = document.getElementById(modal);
+    console.log($target);
+
+    $trigger.addEventListener('click', () => {
+      openModal($target);
+    });
+  });
+
+  // Add a click event on various child elements to close the parent modal
+  (document.querySelectorAll('.modal-background, .modal-close, .modal-card-head .delete, .modal-card-foot .button') || []).forEach(($close) => {
+    const $target = $close.closest('.modal');
+
+    $close.addEventListener('click', () => {
+      closeModal($target);
+    });
+  });
+
+  // Add a keyboard event to close all modals
+  document.addEventListener('keydown', (event) => {
+    const e = event || window.event;
+
+    if (e.keyCode === 27) { // Escape key
+      closeAllModals();
+    }
+  });
+});
+</script>
 
 {% endblock %}
