update static html, css

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <h1 class="title">
-  Flask Login Example
+  AiFame
 </h1>
 <h2 class="subtitle">
-  Easy authentication and authorization in Flask.
+  A simple food inventory to never waste your food again
 </h2>
 {% endblock %}
