--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,8 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Flask Auth Example</title>
+    <title>AiFame</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/darkly/bulmaswatch.min.css"> -->
+    <link rel="stylesheet" type= "text/css" href= "{{ url_for('static',filename='main.min.css') }}">
     <script src = "https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
 </head>
 
