--- a/apps/templates/home/tables.html
+++ b/apps/templates/home/tables.html
@@ -3,7 +3,9 @@
 {% block title %} Tables {% endblock title %}
 
 <!-- Specific CSS goes HERE -->
-{% block stylesheets %}{% endblock stylesheets %}
+{% block stylesheets %} 
+<link href="/static/assets/css/modal.css" rel="stylesheet" />
+{% endblock stylesheets %}
 
 {% block content %}
 
@@ -63,7 +65,7 @@
                   <td class="align-middle text-center">
                     <div class="ms-auto">
                       <a class="btn btn-link text-warning px-3 mb-0" href="javascript:;"><i class="fas fa-pencil-alt me-2" aria-hidden="true"></i>Edit</a>
-                        <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="javascript:document.getElementById('form').submit()"><i class="far fa-trash-alt me-2"></i>Delete</a>
+                        <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="#open-modal"><i class="far fa-trash-alt me-2"></i>Delete</a>
                     </div>
                   </td>
                 </tr>
@@ -84,6 +86,15 @@
     </div>
   </div>
 
+  <div id="open-modal" class="modal-window">
+    <div>
+      <a href="#" title="Close" class="modal-close">Close</a>
+      <h1>Voilà!</h1>
+      <div>A CSS-only modal based on the :target pseudo-class. Hope you find it helpful.</div>
+      <div><small>Check out</small></div>
+      <a href="https://aminoeditor.com" target="_blank">👉 Amino: Live CSS Editor for Chrome</div>
+      </div>
+  </div>
   <!-- <div class="row">
     <div class="col-12">
       <div class="card mb-4">
