--- a/apps/templates/home/tables.html
+++ b/apps/templates/home/tables.html
@@ -74,7 +74,7 @@
                 <div id="modal-edit{{ food.id }}" class="modal-window" role="dialog">
                   <div>
                     <a href="#" title="Close" class="modal-close">Close</a>
-                    <form method="POST" action="/food_update/{{ food.id }}">
+                    <form id="edit-action-modal" method="POST" action="/food_update/{{ food.id }}">
                       <h1>Edit {{ food.name }}</h1>
                       <div class="ms-md-auto pe-md-4 d-flex align-items-center">
                         <h2> Name: </h2>
@@ -97,7 +97,7 @@
                       <div class="row">
                         <div class="col-12">
                           <div class="card mb-4">
-                            <a class="btn modal-btn-confirm bg-gradient-success mb-0" href="javascript:;">Confirm</a>
+                            <a class="btn modal-btn-confirm bg-gradient-success mb-0" href="javascript:;" onclick="document.getElementById('edit-action-modal').submit();" >Confirm</a>
                           </div>
                         </div>
                       </div>
