--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -3,20 +3,20 @@
           <div class="row align-items-center justify-content-lg-between">
             <div class="col-lg-6 mb-lg-0 mb-4">
               <div class="copyright text-center text-sm text-muted text-lg-start">
-                &copy; <a href="https://bit.ly/3fKQZaL" class="font-weight-bold" target="_blank">Creative Tim</a>
-                coded by AppSeed. 
+                &copy; <a href="https://bit.ly/3fKQZaL" class="font-weight-bold" target="_blank">AiFame Inc.</a>
+                coded by Andrea, Mich and Davide. 
               </div>
             </div>
             <div class="col-lg-6">
               <ul class="nav nav-footer justify-content-center justify-content-lg-end">
                 <li class="nav-item">
-                  <a href="https://appseed.us/product/flask-soft-ui-dashboard" class="nav-link text-muted" target="_blank">Download</a>
+                  <a href="#" class="nav-link text-muted" target="_blank">Download</a>
                 </li>
                 <li class="nav-item">
-                  <a href="https://appseed.us/support" class="nav-link text-muted" target="_blank">Support</a>
+                  <a href="#" class="nav-link text-muted" target="_blank">Support</a>
                 </li>
                 <li class="nav-item">
-                  <a href="https://bit.ly/3fKQZaL" class="nav-link text-muted" target="_blank">Creative-Tim</a>
+                  <a href="#" class="nav-link text-muted" target="_blank">Donate</a>
                 </li>
               </ul>
             </div>
