--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -23,7 +23,7 @@
   <link rel="icon" type="image/png" href="/static/assets/img/favicon.png">
 
   <title>
-    Flask Soft UI Dashboard - {% block title %}{% endblock %} | AppSeed
+    AiFame - {% block title %}{% endblock %}
   </title>
   
   <!--     Fonts and icons     -->
