--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -7,7 +7,18 @@
 
 {% block content %}
 
-    <div class="container-fluid py-4">
+
+    <div class="col-xl-11 col-md-11 mb-xl-0 mx-4 p-2">
+      <div class="card h-100 card-plain border">
+        <div class="card-body d-flex flex-column justify-content-center text-center">
+          <a href="javascript:;">
+            <i class="fa fa-plus text-secondary mb-3"></i>
+            <h5 class=" text-secondary"> New Foods Picture </h5>
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="container-fluid py-4">
       <div class="row"> 
         <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
           <div class="card">
@@ -275,8 +286,8 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="row my-4">
+      </div> -->
+      <!-- <div class="row my-4">
         <div class="col-lg-8 col-md-6 mb-md-0 mb-4">
           <div class="card">
             <div class="card-header pb-0">
@@ -620,7 +631,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       {% include "includes/footer.html" %}
 
@@ -631,7 +642,7 @@
 <!-- Specific JS goes HERE --> 
 {% block javascripts %}
 
-  <script>
+  <!-- <script>
     var ctx = document.getElementById("chart-bars").getContext("2d");
 
     new Chart(ctx, {
@@ -800,6 +811,6 @@
         },
       },
     });
-  </script>
+  </script> -->
 
 {% endblock javascripts %}
