Partially form bug fixed

--- a/apps/templates/home/tables.html
+++ b/apps/templates/home/tables.html
@@ -76,7 +76,7 @@
                       <div class="ms-md-auto pe-md-4 d-flex align-items-center">
                         <h2> Name: </h2>
                         <div class="input-group">
-                          <input type="text" class="form-control" name="food" placeholder="food" value="{{ food.name }}">
+                          <input type="text" class="form-control" name="food" placeholder="food_name" value="{{ food.name }}">
                         </div>
                       </div>
                       <div class="ms-md-auto pe-md-4 d-flex align-items-center">
@@ -147,14 +147,14 @@
         <div class="ms-md-auto pe-md-4 d-flex align-items-center">
           <h2> Name: </h2>
           <div class="input-group">
-            <input type="text" class="form-control" name="food" placeholder="Food Name">
+            <input type="text" class="form-control" name="food_name" placeholder="name">
             <!-- {{ form.food_name(placeholder="Food name", class="form-control") }} -->
           </div>
         </div>
         <div class="ms-md-auto pe-md-4 d-flex align-items-center">
           <h2> Quantity: </h2>
           <div class="input-group">
-            <input type="number" class="form-control" name="quantity" placeholder="Food Quantity">
+            <input type="number" class="form-control" name="quantity" placeholder="quantity">
             <!-- {{ form.quantity(placeholder="Quantity", class="form-control") }} -->
           </div>
         </div>
