--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -4,7 +4,7 @@
             <div class="col-lg-6 mb-lg-0 mb-4">
               <div class="copyright text-center text-sm text-muted text-lg-start">
                 &copy; <a href="https://bit.ly/3fKQZaL" class="font-weight-bold" target="_blank">AiFame Inc.</a>
-                coded by Andrea, Mich and Davide. 
+                coded by Andrea, Mich and Davide
               </div>
             </div>
             <div class="col-lg-6">
