--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -7,18 +7,29 @@
 
 {% block content %}
 
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+<div class="notification is-info">
+  {{ messages[0] }}
+</div>
+{% endif %}
+{% endwith %}
 
-    <div class="col-xl-11 col-md-11 mb-xl-0 mx-4 p-2">
-      <div class="card h-100 card-plain border">
-        <div class="card-body d-flex flex-column justify-content-center text-center">
-          <a href="javascript:;">
+<form id="upload-image" action="/upload-image" method="POST" enctype="multipart/form-data">
+  <input type="file" name="image" id="image" autocomplete="off" required>
+  <div class="col-xl-11 col-md-11 mb-xl-0 mx-4 p-2">
+    <div class="card h-100 card-plain border">
+      <div class="card-body d-flex flex-column justify-content-center text-center">
+          <a href="javascript:;" onclick="document.getElementById('upload-image').submit();">
             <i class="fa fa-plus text-secondary mb-3"></i>
             <h5 class=" text-secondary"> New Foods Picture </h5>
           </a>
-        </div>
       </div>
     </div>
-    <!-- <div class="container-fluid py-4">
+  </div>
+</form>
+
+<!-- <div class="container-fluid py-4">
       <div class="row"> 
         <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
           <div class="card">
@@ -287,7 +298,7 @@
           </div>
         </div>
       </div> -->
-      <!-- <div class="row my-4">
+<!-- <div class="row my-4">
         <div class="col-lg-8 col-md-6 mb-md-0 mb-4">
           <div class="card">
             <div class="card-header pb-0">
@@ -633,16 +644,16 @@
         </div>
       </div> -->
 
-      {% include "includes/footer.html" %}
+{% include "includes/footer.html" %}
 
-    </div>
+</div>
 
 {% endblock content %}
 
-<!-- Specific JS goes HERE --> 
+<!-- Specific JS goes HERE -->
 {% block javascripts %}
 
-  <!-- <script>
+<!-- <script>
     var ctx = document.getElementById("chart-bars").getContext("2d");
 
     new Chart(ctx, {
