--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -16,7 +16,7 @@
 {% endwith %}
 
 <form id="upload-image" action="/upload-image" method="POST" enctype="multipart/form-data">
-  <input type="file" name="image" id="image" autocomplete="off" required>
+  <input type="file" name="file" id="image" autocomplete="off" required>
   <div class="col-xl-11 col-md-11 mb-xl-0 mx-4 p-2">
     <div class="card h-100 card-plain border">
       <div class="card-body d-flex flex-column justify-content-center text-center">
