--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -60,7 +60,7 @@
                   <th class="text-secondary opacity-7"></th>
                 </tr>
               </thead>
-              <tbody>
+              <tbody id="detected_food_tables">
                 {% for id, food in detected_foods.items() %}
                 <tr id="{{ id }}">
                   <td>
@@ -158,7 +158,7 @@
   <div class="row">
     <div class="col-12">
       <div class="card mb-4">
-        <a class="btn bg-gradient-success mb-0" href="#modal-add"><i class="fas fa-plus"></i>&nbsp;&nbsp;Add to inventory</a>
+        <a class="btn bg-gradient-success mb-0" onclick="submitDetectFoods();"><i class="fas fa-plus"></i>&nbsp;&nbsp;Add to inventory</a>
       </div>
     </div>
   </div>
@@ -185,6 +185,25 @@
     document.getElementById("quantity" + id).innerHTML = document.getElementById("edit-quantity" + id).value
     document.getElementById("date" + id).innerHTML = document.getElementById("edit-date" + id).value
     document.location.href = "#"
+  }
+
+  function submitDetectFoods() {
+    var xhr = new XMLHttpRequest();
+    xhr.open("POST", "/add_foods_from_image", true);
+    xhr.setRequestHeader('Content-Type', 'application/json');
+
+    let size = document.getElementById("detected_food_tables").childElementCount;
+    const array = [];
+    for (let id = 0; id < size; id++) {
+      array[id] = {
+        'name': document.getElementById("name" + id).innerHTML,
+        'quantity': document.getElementById("quantity" + id).innerHTML,
+        'expiration_date': document.getElementById("date" + id).innerHTML
+      }
+    }
+    console.log(array)
+    xhr.send(JSON.stringify(array));
+    document.location.href = "/tables"
   }
 </script>
 
