--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -5,6 +5,10 @@
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}
 <link href="/static/assets/css/modal.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+  integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link href="/static/assets/css/dragDrop.css" rel="stylesheet" />
 {% endblock stylesheets %}
 
 {% block content %}
@@ -17,26 +21,16 @@
 {% endif %}
 {% endwith %}
 
-<form id="upload-image" action="/upload-image" method="POST" enctype="multipart/form-data">
-  <input type="file" name="file" id="image" autocomplete="off" required>
-  <div class="col-xl-11 col-md-11 mb-xl-0 mx-4 p-2">
-    <div class="card h-100 card-plain border">
-      <div class="card-body d-flex flex-column justify-content-center text-center">
-        <a href="javascript:;" onclick="document.getElementById('upload-image').submit();">
-          <i class="fa fa-plus text-secondary mb-3"></i>
-          <h5 class=" text-secondary"> New Foods Picture </h5>
-        </a>
-      </div>
+<h3 style="margin-left:10px;">Upload your File</h3>
+<div class="drag-drop-container">
+  <div class="drag-area">
+    <div class="icon">
+      <i class="fas fa-images"></i>
     </div>
-  </div>
-</form>
-
-<div class="row">
-  <div class="col-12">
-    <div class="card mb-4">
-      <a class="btn bg-gradient-success mb-0" href="#modal-food-from-pic"><i class="fas fa-plus"></i>&nbsp;&nbsp;Add New
-        Food</a>
-    </div>
+    <span class="header">Drag & Drop</span>
+    <span class="header">or <span class="button">browse</span></span>
+    <input type="file" name="file" id="image" autocomplete="off" hidden />
+    <span class="support">Supports: JPEG, JPG, PNG</span>
   </div>
 </div>
 
@@ -204,6 +198,108 @@
     console.log(array)
     xhr.send(JSON.stringify(array));
     document.location.href = "/tables"
+  }
+
+  const dropArea = document.querySelector('.drag-area');
+  const dragText = document.querySelector('.header');
+  const tag = document.getElementById('scan-button');
+
+  let button = dropArea.querySelector('.button');
+  let input = dropArea.querySelector('input');
+
+  var file;
+
+  button.onclick = () => {
+    input.click();
+  };
+
+  // when browse
+  input.addEventListener('change', function () {
+    file = this.files[0];
+    dropArea.classList.add('active');
+    console.log(file)
+    displayFile();
+    uploadFile(file)
+    removeFile()
+  });
+
+  // when file is inside drag area
+  dropArea.addEventListener('dragover', (event) => {
+    event.preventDefault();
+    dropArea.classList.add('active');
+    dragText.textContent = 'Release to Upload';
+    // console.log('File is inside the drag area');
+  });
+
+  // when file leave the drag area
+  dropArea.addEventListener('dragleave', () => {
+    dropArea.classList.remove('active');
+    // console.log('File left the drag area');
+    dragText.textContent = 'Drag & Drop';
+  });
+
+  // when file is dropped
+  dropArea.addEventListener('drop', (event) => {
+    event.preventDefault();
+    // console.log('File is dropped in drag area');
+
+    file = event.dataTransfer.files[0]; // grab single file even of user selects multiple files
+    console.log(file);
+    displayFile();
+    uploadFile(file)
+    removeFile()
+  });
+
+  function displayFile() {
+    let fileType = file.type;
+    // console.log(fileType);
+
+    let validExtensions = ['image/jpeg', 'image/jpg', 'image/png'];
+
+    if (validExtensions.includes(fileType)) {
+      // console.log('This is an image file');
+      let fileReader = new FileReader();
+      fileReader.readAsDataURL(file);
+
+      fileReader.onloadend = function () {
+        let fileURL = fileReader.result;
+        // console.log(fileURL);
+        let imgTag = `<img src="${fileURL}" alt="">`;
+        dropArea.innerHTML = imgTag;
+      };
+    } else {
+      alert('This is not an Image File');
+      dropArea.classList.remove('active');
+    }
+  }
+
+  function removeFile() {
+    setTimeout(function () {
+      let dragAreaTag =
+        `<div class="drag-area">
+        <div class="icon">
+          <i class="fas fa-images"></i>
+        </div>
+        <span class="header">Drag & Drop</span>
+        <span class="header">or <span class="button">browse</span></span>
+        <input type="file" name="file" id="image" autocomplete="off" hidden />
+        <span class="support">Supports: JPEG, JPG, PNG</span>
+      </div>`
+      dropArea.innerHTML = dragAreaTag;
+      dropArea.classList.remove('active');
+      //alert('Chnaged back');
+    }, 1000)
+
+  }
+
+  async function uploadFile(file) {
+    let formData = new FormData();
+    formData.append("file", file);
+    await fetch('/upload-image', {
+      method: "POST",
+      body: formData
+    });
+    //alert('The file has been uploaded successfully.');
   }
 </script>
 
