--- a/apps/static/assets/css/soft-ui-dashboard.css
+++ b/apps/static/assets/css/soft-ui-dashboard.css
@@ -219,7 +219,9 @@ figure {
 
 img,
 svg {
-  vertical-align: middle; }
+  vertical-align: middle; 
+  pointer-events: none;
+}
 
 table {
   caption-side: bottom;
